tests/ui/empty_tuple.stderr
error[E0277]: `{closure@tests/ui/empty_tuple.rs:6:17: 6:24}` is not a valid query
   --> tests/ui/empty_tuple.rs:6:17
    |
6   |     world.query(|_, ()| {});
    |           ----- ^^^^^^^^^^
    |           |
    |           required by a bound introduced by this call
    |
    = help: the trait `secs::query::Query<_>` is not implemented for closure `{closure@tests/ui/empty_tuple.rs:6:17: 6:24}`
    = note: only tuples with 1 or up to 5 elements can be used as queries
note: required by a bound in `World::query`
   --> $DIR/src/world.rs
    |
LLL |     pub fn query<Q: Query<T>, T>(&self, f: Q) {
    |                     ^^^^^^^^ required by this bound in `World::query`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
